--- a/register.html
+++ b/register.html
@@ -146,7 +146,7 @@
           <p>Datos de prueba:</p>
           <code>
             Usuario: Luis_Test<br>
-            Contraseña: Luis123
+            Contraseña: Luis123#
           </code>
           <button type="button" class="test-user-button" id="testUserButton">
             <span>Usar datos de prueba</span>
