--- a/home.html
+++ b/home.html
@@ -49,17 +49,17 @@
   <section class="features">
     <h2>¿Qué puedes hacer?</h2>
     <div class="features-grid">
-      <a href="/comics" class="feature-card">
+      <a href="/comics.html" class="feature-card">
         <i class="fas fa-book-open"></i>
         <h3>Explorar Cómics</h3>
         <p>Accede a una extensa biblioteca de cómics Marvel</p>
       </a>
-      <a href="/heroes" class="feature-card">
+      <a href="/heroes.html" class="feature-card">
         <i class="fas fa-mask"></i>
         <h3>Conoce Héroes</h3>
         <p>Descubre todos los personajes del universo Marvel</p>
       </a>
-      <a href="/favorites" class="feature-card">
+      <a href="/favorites.html" class="feature-card">
         <i class="fas fa-heart"></i>
         <h3>Guarda Favoritos</h3>
         <p>Crea tu lista personalizada de cómics y héroes favoritos</p>
