--- a/login.html
+++ b/login.html
@@ -26,15 +26,21 @@
           <div class="input-group">
             <i class="fas fa-user"></i>
             <input type="text" id="usuario" name="usuario" placeholder="Usuario" required>
+            <i class="fas fa-check validation-icon success-icon"></i>
+            <i class="fas fa-times validation-icon error-icon"></i>
           </div>
+          <div class="validation-message"></div>
         </div>
 
         <div class="form-group">
-          <div class="input-group">
+          <div class="input-group with-toggle">
             <i class="fas fa-lock"></i>
             <input type="password" id="password" name="password" placeholder="Contraseña" required>
+            <i class="fas fa-check validation-icon success-icon"></i>
+            <i class="fas fa-times validation-icon error-icon"></i>
             <i class="fas fa-eye toggle-password"></i>
           </div>
+          <div class="validation-message"></div>
         </div>
 
         <div class="form-options">
@@ -58,7 +64,7 @@
           <p>Datos de prueba:</p>
           <code>
             Usuario: test<br>
-            Contraseña: Test123
+            Contraseña: Test123#
           </code>
           <button type="button" class="test-user-button" id="testUserButton">
             <span>Usar datos de prueba</span>
@@ -68,10 +74,8 @@
       </form>
     </div>
     <div class="image-credits">
-      Foto de <a
-        href="https://unsplash.com/es/@introspectivedsgn?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Erik
-        Mclean</a> en <a
-        href="https://unsplash.com/es/fotos/un-monton-de-comics-sentados-uno-al-lado-del-otro-8SeJUmfahu0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+      Foto de <a href="https://unsplash.com/es/@introspectivedsgn">Erik Mclean</a> en <a
+        href="https://unsplash.com/es/fotos/8SeJUmfahu0">Unsplash</a>
     </div>
   </div>
 
