spinner y modal working

--- a/comics.html
+++ b/comics.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/comics.css">
+  <link rel="stylesheet" href="styles/spinner.css">
   <link rel="icon" type="image/png" href="assets/images/marvel-logo.png">
 </head>
 
@@ -183,6 +184,7 @@
   <script src="js/classes/Favorites.js"></script>
 
   <!-- Componentes -->
+  <script src="js/components/Spinner.js"></script>
   <script src="js/components/Navbar.js"></script>
   <script src="js/components/FilterBadges.js"></script>
   <script src="js/components/ComicsGrid.js"></script>
