--- a/heroes.html
+++ b/heroes.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/heroes.css">
+  <link rel="stylesheet" href="styles/spinner.css">
   <link rel="icon" type="image/png" href="assets/images/marvel-logo.png">
 </head>
 
@@ -27,8 +28,8 @@
               <button id="searchByNameBtn" class="search-btn">Buscar</button>
             </div>
             <div class="search-container">
-              <i class="fas fa-hashtag search-icon"></i>
-              <input type="number" id="searchById" placeholder="Buscar por ID...">
+              <i class="fas fa-id-card search-icon"></i>
+              <input type="text" id="searchById" placeholder="Buscar por ID...">
               <button id="searchByIdBtn" class="search-btn">Buscar</button>
             </div>
           </div>
@@ -116,6 +117,7 @@
   <script src="js/classes/Hero.js"></script>
 
   <!-- Componentes -->
+  <script src="js/components/Spinner.js"></script>
   <script src="js/components/Navbar.js"></script>
   <script src="js/components/FilterBadges.js"></script>
   <script src="js/components/HeroesGrid.js"></script>
