--- a/heroes.html
+++ b/heroes.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Heroes - Marvel Comics API - UOC</title>
+  <title>Héroes - Marvel Comics API - UOC</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/heroes.css">
@@ -15,7 +15,7 @@
 <body>
   <main>
     <div class="container">
-      <h1 class="main-title">Héroes Marvel</h1>
+      <h1 class="main-title">Héroes</h1>
 
       <!-- Heroes Section -->
       <section class="heroes-section">
