--- a/home.html
+++ b/home.html
@@ -59,10 +59,10 @@
         <h3>Conoce Héroes</h3>
         <p>Descubre todos los personajes del universo Marvel</p>
       </a>
-      <a href="/favorites.html" class="feature-card">
+      <a href="/collections.html" class="feature-card">
         <i class="fas fa-heart"></i>
-        <h3>Guarda Favoritos</h3>
-        <p>Crea tu lista personalizada de cómics y héroes favoritos</p>
+        <h3>Crea tus Colecciones</h3>
+        <p>Guarda tus cómics en nuestras colecciones pensadas para ti</p>
       </a>
     </div>
   </section>
