--- a/collections.html
+++ b/collections.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Favorites - Marvel Comics API - UOC</title>
-  <link rel="stylesheet" href="styles/favorites.css">
+  <title>Collections - Marvel Comics API - UOC</title>
+  <link rel="stylesheet" href="styles/collections.css">
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="icon" type="image/png" href="assets/images/marvel-logo.png">
@@ -16,13 +16,13 @@
 
   <!-- Main Content -->
   <main>
-    <section class="favorites-section">
+    <section class="collections-section">
       <div class="section-header">
-        <h2>Mis Favoritos</h2>
+        <h2>Mis Colecciones</h2>
       </div>
 
       <!-- Tabs -->
-      <div class="favorites-tabs">
+      <div class="collections-tabs">
         <button class="tab-btn active" data-collection="wishlist">
           <i class="fas fa-star"></i>
           Lista de Deseos
@@ -39,18 +39,18 @@
           <i class="fas fa-check-circle"></i>
           Leídos
         </button>
-        <button class="tab-btn" data-collection="favorites">
+        <button class="tab-btn" data-collection="collections">
           <i class="fas fa-heart"></i>
-          Mis Favoritos
+          Favoritos
         </button>
       </div>
 
       <!-- Content -->
-      <div class="favorites-content">
-        <div class="favorites-grid">
-          <!-- Favorites will be loaded here dynamically -->
+      <div class="collections-content">
+        <div class="collections-grid">
+          <!-- Collections will be loaded here dynamically -->
         </div>
-        <div class="no-favorites-message" style="display: none;">
+        <div class="no-collections-message" style="display: none;">
           <i class="fas fa-heart-broken"></i>
           <p>No hay cómics en esta colección</p>
         </div>
@@ -73,14 +73,14 @@
   <!-- Clases base -->
   <script src="js/classes/Comic.js"></script>
   <script src="js/classes/Hero.js"></script>
-  <script src="js/classes/Favorites.js"></script>
+  <script src="js/classes/Collections.js"></script>
 
   <!-- Componentes -->
   <script src="js/components/Navbar.js"></script>
   <script src="js/components/Card.js"></script>
 
   <!-- Script principal -->
-  <script src="js/favorites.js"></script>
+  <script src="js/collections.js"></script>
 </body>
 
 </html>
