--- a/comics.html
+++ b/comics.html
@@ -124,13 +124,13 @@
         <span class="selected-count">0 cómics seleccionados</span>
       </div>
       <div class="actions-buttons">
-        <button class="save-favorites-btn">
+        <button class="save-collections-btn">
           <i class="fas fa-heart"></i>
-          Añadir a Favoritos
+          Añadir a Colecciones
         </button>
-        <button class="remove-favorites-btn">
+        <button class="remove-collections-btn">
           <i class="fas fa-trash"></i>
-          Remover de Favoritos
+          Remover de Colecciones
         </button>
       </div>
     </div>
@@ -158,9 +158,9 @@
           <i class="fas fa-check-circle"></i>
           Leídos
         </button>
-        <button class="collection-btn" data-collection="favorites">
+        <button class="collection-btn" data-collection="collections">
           <i class="fas fa-heart"></i>
-          Mis Favoritos
+          Favoritos
         </button>
       </div>
     </div>
@@ -181,7 +181,7 @@
   <!-- Clases base -->
   <script src="js/classes/Comic.js"></script>
   <script src="js/classes/Hero.js"></script>
-  <script src="js/classes/Favorites.js"></script>
+  <script src="js/classes/Collections.js"></script>
 
   <!-- Componentes -->
   <script src="js/components/Spinner.js"></script>
