query by id of heroes done

--- a/comics.html
+++ b/comics.html
@@ -70,6 +70,11 @@
               <input type="number" id="searchById" placeholder="Buscar por ID...">
               <button id="searchByIdBtn" class="search-btn">Buscar</button>
             </div>
+            <div class="search-container">
+              <i class="fas fa-mask search-icon"></i>
+              <input type="number" id="searchByHero" placeholder="Buscar por ID de héroe...">
+              <button id="searchByHeroBtn" class="search-btn">Buscar</button>
+            </div>
             <div class="price-filter-container">
               <i class="fas fa-dollar-sign search-icon"></i>
               <input type="number" id="priceFilter" placeholder="Filtrar por precio máximo...">
