--- a/comics.html
+++ b/comics.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/comics.css">
   <link rel="stylesheet" href="styles/spinner.css">
+  <link rel="stylesheet" href="styles/comicModal.css">
   <link rel="icon" type="image/png" href="assets/images/marvel-logo.png">
 </head>
 
@@ -197,6 +198,8 @@
   <script src="js/components/ComicsActionsBar.js"></script>
   <script src="js/components/ComicsCollectionModal.js"></script>
   <script src="js/components/HeroesCarousel.js"></script>
+  <script src="js/components/Accordion.js"></script>
+  <script src="js/components/ComicModal.js"></script>
 
   <!-- Script principal -->
   <script src="js/comics.js"></script>
