--- a/heroes.html
+++ b/heroes.html
@@ -100,6 +100,7 @@
   <!-- Clases base -->
   <script src="js/classes/Comic.js"></script>
   <script src="js/classes/Hero.js"></script>
+  <script src="js/classes/Collections.js"></script>
 
   <!-- Componentes -->
   <script src="js/components/Spinner.js"></script>
