--- a/home.html
+++ b/home.html
@@ -6,26 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marvel Comics API - UOC</title>
   <link rel="stylesheet" href="styles/home.css">
+  <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="assets/images/marvel-logo.png">
 </head>
 
 <body>
-  <!-- Navbar -->
-  <nav class="navbar">
-    <div class="logo">
-      <h1>Marvel Comics API - UOC</h1>
-    </div>
-    <div class="auth-buttons">
-      <a href="login.html" class="btn login">
-        <i class="fas fa-sign-in-alt"></i>
-        <span>Login</span>
-      </a>
-      <a href="register.html" class="btn register">
-        <i class="fas fa-user-plus"></i>
-        <span>Register</span>
-      </a>
-    </div>
-  </nav>
+  <!-- El navbar se insertará dinámicamente aquí -->
 
   <!-- Hero Banner -->
   <section class="hero-banner">
@@ -72,7 +59,13 @@
     <p>&copy; 2024 Marvel Comics API - UOC. Todos los derechos reservados.</p>
   </footer>
 
+  <!-- Scripts necesarios -->
+  <script src="js/config.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/classes/Collections.js"></script>
+  <script src="js/components/Navbar.js"></script>
   <script src="js/home.js"></script>
+  
 </body>
 
 </html>
