--- a/comics.html
+++ b/comics.html
@@ -171,6 +171,11 @@
       </div>
     </div>
   </main>
+  
+  <!-- Footer -->
+  <footer class="marvel-footer">
+    <p>Data provided by Marvel. © 2014 Marvel</p>
+  </footer>
 
   <!-- Scripts -->
   <!-- Dependencias externas -->
