--- a/heroes.html
+++ b/heroes.html
@@ -84,7 +84,10 @@
       </div>
     </div>
   </main>
-
+  <!-- Footer -->
+  <footer class="marvel-footer">
+    <p>Data provided by Marvel. © 2014 Marvel</p>
+  </footer>
   <!-- Scripts -->
   <!-- Dependencias externas -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
