--- a/home.html
+++ b/home.html
@@ -55,8 +55,8 @@
   </section>
 
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2024 Marvel Comics API - UOC. Todos los derechos reservados.</p>
+  <footer class="marvel-footer">
+    <p>Data provided by Marvel. © 2014 Marvel</p>
   </footer>
 
   <!-- Scripts necesarios -->
@@ -65,7 +65,7 @@
   <script src="js/classes/Collections.js"></script>
   <script src="js/components/Navbar.js"></script>
   <script src="js/home.js"></script>
-  
+
 </body>
 
 </html>
