--- a/collections.html
+++ b/collections.html
@@ -101,6 +101,11 @@
       </div>
     </div>
   </div>
+  
+  <!-- Footer -->
+  <footer class="marvel-footer">
+    <p>Data provided by Marvel. © 2014 Marvel</p>
+  </footer>
 
   <!-- Scripts -->
   <!-- Dependencias externas -->
